--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.0",
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "reactstrap": "^9.2.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
