--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.198"
+    "@types/lodash": "^4.14.198",
+    "tailwindcss": "^3.3.3"
   }
 }
